--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,63 +62,61 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
+//    //Retrofit
+//    def retrofit_version = '2.9.0'
+//    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+//    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+//    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 
-    //Retrofit
-    def retrofit_version = '2.9.0'
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+//    //Navigation
+//    implementation "androidx.navigation:navigation-compose:2.5.3"
 
-    //Navigation
-    implementation "androidx.navigation:navigation-compose:2.5.3"
+//    //Viewmodel
+//    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 
-    //Viewmodel
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-
-    //Room database
-    implementation "androidx.room:room-runtime:2.5.0"
-    implementation "androidx.room:room-ktx:2.5.0"
-    implementation 'androidx.room:room-paging:2.5.0'
+//    //Room database
+//    implementation "androidx.room:room-runtime:2.5.0"
+//    implementation "androidx.room:room-ktx:2.5.0"
+//    implementation 'androidx.room:room-paging:2.5.0'
 
     //implementation 'androidx.paging:paging-common-ktx:3.1.1'
-    kapt "androidx.room:room-compiler:2.5.0"
+//    kapt "androidx.room:room-compiler:2.5.0"
 
-    //Data Store Preferences
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
+//    //Data Store Preferences
+//    implementation "androidx.datastore:datastore-preferences:1.0.0"
 
-    //Hilt
-    implementation 'com.google.dagger:hilt-android:2.44'
-    kapt 'com.google.dagger:hilt-compiler:2.44'
+//    //Hilt
+//    implementation 'com.google.dagger:hilt-android:2.44'
+//    kapt 'com.google.dagger:hilt-compiler:2.44'
 
-    //Constraint Layout
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+//    //Constraint Layout
+//    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
-    //ViewPager
-    implementation 'com.google.accompanist:accompanist-pager:0.25.1'
+//    //ViewPager
+//    implementation 'com.google.accompanist:accompanist-pager:0.25.1'
 
-    //Material Icons
-    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.28.0"
+//    //Material Icons
+//    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+//    implementation "com.google.accompanist:accompanist-systemuicontroller:0.28.0"
 
-    //navigation-compose
-    implementation "androidx.navigation:navigation-compose:2.6.0-alpha05"
+//    //navigation-compose
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
-    //Paging
-    implementation "androidx.paging:paging-compose:1.0.0-alpha18"
+//    //Paging
+//    implementation "androidx.paging:paging-compose:1.0.0-alpha18"
 
-    //ML-kit image labeling
-    implementation 'com.google.mlkit:image-labeling:17.0.7'
-    implementation 'com.google.android.gms:play-services-mlkit-image-labeling:16.0.8'
+//    //ML-kit image labeling
+//    implementation 'com.google.mlkit:image-labeling:17.0.7'
+//    implementation 'com.google.android.gms:play-services-mlkit-image-labeling:16.0.8'
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
+//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
 
-    //lottie
-    implementation "com.airbnb.android:lottie-compose:5.2.0"
-
-    //Glide implementation
-    implementation "com.github.skydoves:landscapist-glide:1.3.6"
-
-    //Coil implementation
-    implementation "io.coil-kt:coil-compose:2.2.2"
+//    //lottie
+//    implementation "com.airbnb.android:lottie-compose:5.2.0"
+//
+//    //Glide implementation
+//    implementation "com.github.skydoves:landscapist-glide:1.3.6"
+//
+//    //Coil implementation
+//    implementation "io.coil-kt:coil-compose:2.2.2"
 }
